# Pacbot-2-fa-25

./: .gitignore
server/game/: game_engine.go
server/game_rs/: Cargo.toml  Dockerfile  TODO.md  docker-compose.yml  test_game.py
server/game_rs/src/: commands.rs  constants.rs  direction.rs  engine.rs  game_helpers.rs  game_modes.rs  ghost_helpers.rs  ghost_state.rs  lib.rs  location.rs  logging.rs  mod.rs  state.rs
server/game_rs/src/pyo3_bindings/: constants_py.rs  engine_py.rs  game_helpers_py.rs  ghost_state_py.rs  location_py.rs  logging_py.rs  mod.rs  state_py.rs
web_client/: package-lock.json  package.json
