[package]
name = "game-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
parking_lot = "0.12.5"
pyo3 = { version = "0.26.0", features = ["extension-module"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.41"

[lib]
name = "game_rs"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "game_rs"
